# DeepRabbit

./: .deeprabbit_reviews.db  .dockerignore  .env.example  .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  Dockerfile  README.md  action.yml  debug_regex.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deeprabbit.yml
examples/: bad_code.py  terrible_code.py
scripts/: send_review.py
src/: __init__.py  cli.py  code_analyzer.py  comment_generator.py  config.py  dashboard.py  github_client.py  llm_client.py  main.py  models.py  prompt_templates.py  security_scanner.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_comment_generator.py  test_config.py  test_llm_client.py  test_main.py  test_security_scanner.py
