[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deeprabbit"
version = "1.0.0"
description = "AI-powered autonomous code review using DeepSeek LLM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "DeepRabbit Team", email = "team@deeprabbit.dev"}
]
keywords = ["code-review", "ai", "llm", "github", "security", "refactoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "pygithub>=2.5.0",
    "PyJWT>=2.9.0",
    "requests>=2.32.0",
    "structlog>=24.0.0",
    "orjson>=3.10.0",
]

[project.scripts]
deeprabbit = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "bandit>=1.7.0",
    "semgrep>=1.90.0",
    "radon>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/deeprabbbit-ai/deeprabbit"
Documentation = "https://docs.deeprabbit.dev"
Repository = "https://github.com/deeprabbbit-ai/deeprabbit"
Issues = "https://github.com/deeprabbbit-ai/deeprabbit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["tests/"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "W", "UP", "B", "C4",
    "SIM", "ARG", "PTH", "RUF"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
